Add chest_xray models

--- a/Inference-Part1.ipynb
+++ b/Inference-Part1.ipynb
@@ -82,9 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = torch.load(\"animals_caltech.pt\", map_location='cpu')\n",
-    "# In case of a GPU machine, use:\n",
-    "# model = torch.load(\"chest_xray_kaggle_model_23_good.pt\")"
+    "model = torch.load(\"animals_caltech.pt\", map_location='cpu')"
    ]
   },
   {
